--- a/index.html
+++ b/index.html
@@ -11,25 +11,13 @@
   <body>
     <main>
       <section class="card">
-        <img
-          class="box-img"
-          src="./images/illustration-box-desktop.svg"
-          alt="#"
-        />
+        <img class="box-img" src="./images/illustration-box-desktop.svg" alt="#" />
 
-        <img
-          class="mobile-img"
-          src="./images/illustration-woman-online-mobile.svg"
-          alt="#"
-        />
+        <img class="mobile-img" src="./images/illustration-woman-online-mobile.svg" alt="#" />
 
         <div class="columns left-column">
           <div class="img-container">
-            <img
-              class="main-img"
-              src="./images/illustration-woman-online-desktop.svg"
-              alt="#"
-            />
+            <img class="main-img" src="./images/illustration-woman-online-desktop.svg" alt="#" />
           </div>
         </div>
 
@@ -41,16 +29,12 @@
               <div class="content-wrapper">
                 <div class="questions">
                   <p>How many team members can I invite?</p>
-                  <img
-                    class="arrows"
-                    src="./images/icon-arrow-down.svg"
-                    alt="#"
-                  />
+                  <img class="arrows" src="./images/icon-arrow-down.svg" alt="#" />
                 </div>
                 <div class="answers">
                   <p>
-                    You can invite up to 2 additional users on the Free plan.
-                    There is no limit on team members for the Premium plan.
+                    You can invite up to 2 additional users on the Free plan. There is no limit on
+                    team members for the Premium plan.
                   </p>
                 </div>
                 <hr />
@@ -61,16 +45,12 @@
               <div class="content-wrapper">
                 <div class="questions">
                   <p>What is the maximum file upload size?</p>
-                  <img
-                    class="arrows"
-                    src="./images/icon-arrow-down.svg"
-                    alt="#"
-                  />
+                  <img class="arrows" src="./images/icon-arrow-down.svg" alt="#" />
                 </div>
                 <div class="answers">
                   <p>
-                    No more than 2GB. All files in your account must fit your
-                    allotted storage space.
+                    No more than 2GB. All files in your account must fit your allotted storage
+                    space.
                   </p>
                 </div>
                 <hr />
@@ -80,14 +60,13 @@
             <li>
               <div class="content-wrapper">
                 <div class="questions">
-                  <p>How do I reset my password?</p>
+                  <p>How do I reset my password??</p>
                   <img src="./images/icon-arrow-down.svg" alt="#" />
                 </div>
                 <div class="answers">
                   <p>
-                    Click “Forgot password” from the login page or “Change
-                    password” from your profile page. A reset link will be
-                    emailed to you.
+                    Click “Forgot password” from the login page or “Change password” from your
+                    profile page. A reset link will be emailed to you.
                   </p>
                 </div>
                 <hr />
@@ -101,10 +80,7 @@
                   <img src="./images/icon-arrow-down.svg" alt="#" />
                 </div>
                 <div class="answers">
-                  <p>
-                    Yes! Send us a message and we’ll process your request no
-                    questions asked.
-                  </p>
+                  <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
                 </div>
                 <hr />
               </div>
@@ -118,8 +94,8 @@
                 </div>
                 <div class="answers">
                   <p>
-                    Chat and email support is available 24/7. Phone lines are
-                    open during normal business hours.
+                    Chat and email support is available 24/7. Phone lines are open during normal
+                    business hours.
                   </p>
                 </div>
                 <hr />
