added from a new remote computer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mobile.css" />
     <title>FAQ - Accordeon</title>
+    <!--Hello world !-->
   </head>
   <body>
     <main>
@@ -105,6 +106,7 @@
         </div>
       </section>
     </main>
+    <div class="test">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas incidunt id molestias cum et quo. Eius fugiat accusamus, reiciendis expedita minus molestias porro ipsam minima eum autem, quae earum, voluptatum adipisci tempore perferendis nulla? Facilis error totam quaerat, earum quia fugiat consectetur dolorem hic maiores labore, odit voluptatem reiciendis nemo?</div>
     <script src="./app.js"></script>
   </body>
 </html>
