--- a/index.html
+++ b/index.html
@@ -7,18 +7,29 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mobile.css" />
     <title>FAQ - Accordeon</title>
-    <!--Hello world !-->
   </head>
   <body>
     <main>
       <section class="card">
-        <img class="box-img" src="./images/illustration-box-desktop.svg" alt="#" />
+        <img
+          class="box-img"
+          src="./images/illustration-box-desktop.svg"
+          alt="#"
+        />
 
-        <img class="mobile-img" src="./images/illustration-woman-online-mobile.svg" alt="#" />
+        <img
+          class="mobile-img"
+          src="./images/illustration-woman-online-mobile.svg"
+          alt="#"
+        />
 
         <div class="columns left-column">
           <div class="img-container">
-            <img class="main-img" src="./images/illustration-woman-online-desktop.svg" alt="#" />
+            <img
+              class="main-img"
+              src="./images/illustration-woman-online-desktop.svg"
+              alt="#"
+            />
           </div>
         </div>
 
@@ -30,12 +41,16 @@
               <div class="content-wrapper">
                 <div class="questions">
                   <p>How many team members can I invite?</p>
-                  <img class="arrows" src="./images/icon-arrow-down.svg" alt="#" />
+                  <img
+                    class="arrows"
+                    src="./images/icon-arrow-down.svg"
+                    alt="#"
+                  />
                 </div>
                 <div class="answers">
                   <p>
-                    You can invite up to 2 additional users on the Free plan. There is no limit on
-                    team members for the Premium plan.
+                    You can invite up to 2 additional users on the Free plan.
+                    There is no limit on team members for the Premium plan.
                   </p>
                 </div>
                 <hr />
@@ -46,12 +61,16 @@
               <div class="content-wrapper">
                 <div class="questions">
                   <p>What is the maximum file upload size?</p>
-                  <img class="arrows" src="./images/icon-arrow-down.svg" alt="#" />
+                  <img
+                    class="arrows"
+                    src="./images/icon-arrow-down.svg"
+                    alt="#"
+                  />
                 </div>
                 <div class="answers">
                   <p>
-                    No more than 2GB. All files in your account must fit your allotted storage
-                    space.
+                    No more than 2GB. All files in your account must fit your
+                    allotted storage space.
                   </p>
                 </div>
                 <hr />
@@ -61,13 +80,14 @@
             <li>
               <div class="content-wrapper">
                 <div class="questions">
-                  <p>How do I reset my password??</p>
+                  <p>How do I reset my password?</p>
                   <img src="./images/icon-arrow-down.svg" alt="#" />
                 </div>
                 <div class="answers">
                   <p>
-                    Click “Forgot password” from the login page or “Change password” from your
-                    profile page. A reset link will be emailed to you.
+                    Click “Forgot password” from the login page or “Change
+                    password” from your profile page. A reset link will be
+                    emailed to you.
                   </p>
                 </div>
                 <hr />
@@ -81,7 +101,10 @@
                   <img src="./images/icon-arrow-down.svg" alt="#" />
                 </div>
                 <div class="answers">
-                  <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+                  <p>
+                    Yes! Send us a message and we’ll process your request no
+                    questions asked.
+                  </p>
                 </div>
                 <hr />
               </div>
@@ -95,8 +118,8 @@
                 </div>
                 <div class="answers">
                   <p>
-                    Chat and email support is available 24/7. Phone lines are open during normal
-                    business hours.
+                    Chat and email support is available 24/7. Phone lines are
+                    open during normal business hours.
                   </p>
                 </div>
                 <hr />
@@ -106,7 +129,6 @@
         </div>
       </section>
     </main>
-    <div class="test">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas incidunt id molestias cum et quo. Eius fugiat accusamus, reiciendis expedita minus molestias porro ipsam minima eum autem, quae earum, voluptatum adipisci tempore perferendis nulla? Facilis error totam quaerat, earum quia fugiat consectetur dolorem hic maiores labore, odit voluptatem reiciendis nemo?</div>
     <script src="./app.js"></script>
   </body>
 </html>
